--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 
     <nav>
-        <img src="./images/logo.png" alt="Developer's Logo">
+        <img src="./images/logo-white.png" alt="Developer's Logo">
         <ul>
             <li>
                 <a class="nav-link link" id="about" href="#about"
-                    style="color: dodgerblue; border-bottom: 1.5px solid salmon;">Home</a>
+                    style="color: white; border-bottom: 1.5px solid salmon;">Home</a>
             </li>
             <li>
                 <a class="nav-link link" id="works" href="#works">Works</a>
@@ -86,7 +86,7 @@
 
                 <div class="expertise">
                     <!-- <img src="https://img.icons8.com/color/48/000000/pug.png"> -->
-                    <img src="./images/pug.png" alt="pug templating ">
+                    <img src="./images/pug-white.png" alt="pug templating ">
                     <p>pug</p>
                 </div>
             </div>
