--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <main>
-        <section class="about" style="opacity: 1; transition: all ease-out 1.5s">
+        <section class="about" style="z-index:1; opacity: 1; transition: all ease-out 1.5s">
             <div class="bio-description">
                 <p>
                     <p class="name">
