--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto+Slab" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 
@@ -54,41 +54,53 @@
             </div>
             <div class="bio-expertise">
                 <!-- <p>things i can code in</p> -->
-                <div class="expertise">
-                    <i class="fas fa-code fa-3x"></i>
-                    <p>html</p>
-
+                <div class="skills-expertise">
+                    <h2 class="name">Skills & Experience</h2>
+                    <p>
+                        The main area of my expertise is the back end development (Server side of the web(Expressjs and PHP)).
+                        I have also full-stack developer experience in developing a full functional web side. Can write
+                        code in Reactjs,HTML & CSS.
+                    </p>
                 </div>
 
-                <div class="expertise">
-                    <i class="fab fa-css3 fa-3x"></i>
-                    <p>css</p>
+                <div class="expertise-lang">
+                    <div class="expertise">
+                        <i class="fas fa-code fa-3x"></i>
+                        <p>html</p>
 
+                    </div>
+
+                    <div class="expertise">
+                        <i class="fab fa-css3 fa-3x"></i>
+                        <p>css</p>
+
+                    </div>
+
+                    <div class="expertise">
+                        <i class="fab fa-js fa-3x"></i>
+                        <p>javascript</p>
+
+                    </div>
+
+                    <div class="expertise">
+                        <i class="fab fa-react fa-3x"></i>
+                        <p>react</p>
+
+                    </div>
+
+                    <div class="expertise">
+                        <i class="fab fa-php fa-3x"></i>
+                        <p>php</p>
+
+                    </div>
+
+                    <div class="expertise">
+                        <!-- <img src="https://img.icons8.com/color/48/000000/pug.png"> -->
+                        <img src="./images/pug-white.png" alt="pug templating ">
+                        <p>pug</p>
+                    </div>
                 </div>
 
-                <div class="expertise">
-                    <i class="fab fa-js fa-3x"></i>
-                    <p>javascript</p>
-
-                </div>
-
-                <div class="expertise">
-                    <i class="fab fa-react fa-3x"></i>
-                    <p>react</p>
-
-                </div>
-
-                <div class="expertise">
-                    <i class="fab fa-php fa-3x"></i>
-                    <p>php</p>
-
-                </div>
-
-                <div class="expertise">
-                    <!-- <img src="https://img.icons8.com/color/48/000000/pug.png"> -->
-                    <img src="./images/pug-white.png" alt="pug templating ">
-                    <p>pug</p>
-                </div>
             </div>
         </section>
 
