minor issues fixed plus images updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="name">
                         <strong>Hi, I'm Leonard Achanya</strong>
                     </p>
-                    <p class="title">Software Developer : </p>
+                    <p class="title"> a Software Developer : </p>
                     <p class="description">
                         an individual who contributes to innovative, ground
                         breaking software solutions that meet business
@@ -55,11 +55,11 @@
             <div class="bio-expertise">
                 <!-- <p>things i can code in</p> -->
                 <div class="skills-expertise">
-                    <h2 class="name">Skills & Experience</h2>
+                    <h2 class="name">things i can code in</h2>
                     <p>
-                        The main area of my expertise is the back end development (Server side of the web(Expressjs and PHP)).
-                        I have also full-stack developer experience in developing a full functional web side. Can write
-                        code in Reactjs,HTML & CSS.
+                        The main area of my expertise is the back end development ( Server side of the web ).
+                        I have also an experience in developing a full functional website. Can write
+                        codes in Reactjs,HTML & CSS.
                     </p>
                 </div>
 
@@ -106,39 +106,27 @@
 
         <section class="works">
             <div class="work-item">
-                <img src="./images/img-1.jpg" alt="work-img">
+                <img src="./images/smartring.png" alt="work-img">
                 <p class="work-desc">
-                    <a href="#" target="_blank">Work 1</a>
+                    <a href="https://github.com/LeonardAchanya/smartring" target="_blank">Smart Ring Design</a>
                 </p>
             </div>
             <div class="work-item">
-                <img src="./images/img-2.jpg" alt="work-img">
+                <img src="./images/foody.png" alt="work-img">
                 <p class="work-desc">
-                    <a href="#" target="_blank">Work 2</a>
+                    <a href="https://github.com/LeonardAchanya/foody" target="_blank">Foody Design</a>
                 </p>
             </div>
             <div class="work-item">
-                <img src="./images/img-3.jpg" alt="work-img">
+                <img src="./images/pokemon.png" alt="work-img">
                 <p class="work-desc">
-                    <a href="#" target="_blank">Work 3</a>
+                    <a href="https://vj1rw2j0o5.codesandbox.io/" target="_blank">Pokemon</a>
                 </p>
             </div>
             <div class="work-item">
-                <img src="./images/img-4.jpg" alt="work-img">
+                <img src="./images/tweeter.png" alt="work-img">
                 <p class="work-desc">
-                    <a href="#" target="_blank">Work 4</a>
-                </p>
-            </div>
-            <div class="work-item">
-                <img src="./images/img-5.jpg" alt="work-img">
-                <p class="work-desc">
-                    <a href="#" target="_blank">Work 5</a>
-                </p>
-            </div>
-            <div class="work-item">
-                <img src="./images/img-6.jpg" alt="work-img">
-                <p class="work-desc">
-                    <a href="#" target="_blank">Work 6</a>
+                    <a href="https://383z1zx595.codesandbox.io/" target="_blank">Simple demo of twitter validation</a>
                 </p>
             </div>
         </section>
