--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="work-item">
                 <img src="./images/tweeter.png" alt="work-img">
                 <p class="work-desc">
-                    <a href="https://383z1zx595.codesandbox.io/" target="_blank">Simple demo of twitter validation</a>
+                    <a href="https://383z1zx595.codesandbox.io/" target="_blank">Twitter validation</a>
                 </p>
             </div>
         </section>
@@ -143,7 +143,8 @@
                 <a href="https://github.com/LeonardAchanya" target="_blank"><i class="fab fa-github"></i></a>
             </li>
             <li>
-                <a href="#"><i class="far fa-envelope"></i></a>
+                <a href="mailto:lennardachanya.la@gmail.com"><i class="far fa-envelope"></i></a>
+                
             </li>
         </ul>
         &copy; created by Leonard Achanya
