--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Leonard Achanya | Software Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto+Slab" rel="stylesheet">
     <script src="main.js"></script>
 </head>
@@ -20,8 +19,7 @@
         <img src="./images/logo-white.png" alt="Developer's Logo">
         <ul>
             <li>
-                <a class="nav-link link" id="about" href="#about"
-                    style="color: white; border-bottom: 1.5px solid salmon;">Home</a>
+                <a class="nav-link link" id="about" href="#about" style="color: white; border-bottom: 1.5px solid salmon;">Home</a>
             </li>
             <li>
                 <a class="nav-link link" id="works" href="#works">Works</a>
@@ -30,8 +28,7 @@
                 <a class="nav-link" href="https://medium.com/@Leonard.Achanya" target="_blank">Blog</a>
             </li>
             <li>
-                <a class="nav-link" href="https://drive.google.com/open?id=10db95pRhDZCdDm_BDhCF6ykdKH1ppi25"
-                    target="_blank">Resume</a>
+                <a class="nav-link" href="https://drive.google.com/open?id=10db95pRhDZCdDm_BDhCF6ykdKH1ppi25" target="_blank">Resume</a>
             </li>
         </ul>
     </nav>
@@ -45,10 +42,7 @@
                     </p>
                     <p class="title"> a Software Developer : </p>
                     <p class="description">
-                        an individual who contributes to innovative, ground
-                        breaking software solutions that meet business
-                        demand for agility, flexibility, mobility and superb cloud experience using
-                        technical, analytical and problem solving skills.
+                        who contributes to innovative, ground breaking software solutions that meet business demand for agility, flexibility, mobility and superb cloud experience using technical, analytical and problem solving skills.
                     </p>
                 </p>
             </div>
@@ -57,9 +51,7 @@
                 <div class="skills-expertise">
                     <h2 class="name">things i can code in</h2>
                     <p>
-                        The main area of my expertise is the back end development ( Server side of the web ).
-                        I have also an experience in developing a full functional website. Can write
-                        codes in Reactjs,HTML & CSS.
+                        The main area of my expertise is the back end development ( Server side of the web ). I have also an experience in developing a full functional website. Can write codes in Reactjs,HTML & CSS.
                     </p>
                 </div>
 
@@ -144,7 +136,7 @@
             </li>
             <li>
                 <a href="mailto:lennardachanya.la@gmail.com"><i class="far fa-envelope"></i></a>
-                
+
             </li>
         </ul>
         &copy; created by Leonard Achanya
