--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="https://medium.com/@Leonard.Achanya" target="_blank">Blog</a>
             </li>
             <li>
-                <a class="nav-link" href="https://drive.google.com/open?id=10db95pRhDZCdDm_BDhCF6ykdKH1ppi25" target="_blank">Resume</a>
+                <a class="nav-link" href="https://drive.google.com/file/d/1qmq81_2E1_DCOkDFQ3LsYEImiaB-jhYA/view?usp=sharing" target="_blank">Resume</a>
             </li>
         </ul>
     </nav>
